# dragon

./: .gitignore  .readthedocs.yaml  CITATION.cff  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh
aws/: build_allthebacteria_index.sh  build_gtdb_index.sh  build_refseq_index.sh  setup_index_builder.sh
benches/: benchmark.rs
benchmark/: Snakefile  config.yaml  download_genomes.py  run_benchmark.py  run_signal_benchmark.py  setup_real_data.py  setup_test_data.py
benchmark/envs/: simulation.yaml
benchmark/notebooks/: figures.py
benchmark/scripts/: compute_metrics.py  evaluate_seed_scorer.py  resource_usage.py  train_pore_model.py  train_seed_scorer.py  train_signal_boundaries.py  train_signal_scorer.py
benchmark/simulate/: extract_genes.py  mutate_sequences.py  run_art.sh  run_badread.sh
docs/: conf.py  index.md
docs/api/: cli.md
docs/architecture/: chaining.md  fm-index.md  overview.md
docs/benchmark/: datasets.md  reproducing.md
docs/design/: paths-bin-v3.md  paths-bin-v4-lazy-access.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: output-formats.md  searching.md
manuscript/: dragon_manuscript.docx  dragon_manuscript.tex  generate_docx.js  generate_fig1.py
manuscript/unpacked/: [Content_Types].xml
publish/: LICENSE  MANIFEST.md  NOTICE.md  README.md  manifest.csv
publish/aws-open-data/: dragon-indexes.roda.yaml
publish/scripts/: build_card_index.sh  build_vfdb_index.sh  gen_manifest.sh
publish/zenodo/: zenodo-metadata.json
scripts/: compare_baselines.sh  make_demo_data.py  make_pore_model.py  train_seed_scorer.py  zarr_demo.py  zarr_query_demo.py  zarr_quickstart.sh
src/: lib.rs  main.rs  profile.rs
src/ds/: elias_fano.rs  fenwick.rs  mod.rs  varint.rs
src/index/: auto_batch.rs  color.rs  dbg.rs  fm.rs  ggcat_colors.rs  metadata.rs  mod.rs  paths.rs  paths_v2.rs  paths_v3.rs  paths_v4.rs  specificity.rs  unitig.rs  update.rs  zarr_backend.rs  zarr_http.rs
src/io/: blast.rs  fasta.rs  graph_context.rs  mod.rs  paf.rs  summary.rs
src/query/: adaptive_kmer.rs  align.rs  bayes.rs  candidate.rs  chain.rs  containment.rs  direct_align.rs  extract.rs  graph_align.rs  ml_score.rs  mod.rs  seed.rs  spaced_seed.rs  sprt.rs  zarr_align.rs
src/signal/: index.rs  (+5 more)
tests/: integration.rs  integration_align.rs  integration_paths_v3.rs  integration_real_genome.rs  integration_zarr_align.rs
(+70 files in other folders)
